; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/glxsb/extr_glxsb.c_glxsb_crypto_freesession.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/glxsb/extr_glxsb.c_glxsb_crypto_freesession.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.glxsb_softc = type { i32 }
%struct.glxsb_session = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @glxsb_crypto_freesession to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @glxsb_crypto_freesession(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.glxsb_softc*, align 8
  %6 = alloca %struct.glxsb_session*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.glxsb_softc* @device_get_softc(i32 %7)
  store %struct.glxsb_softc* %8, %struct.glxsb_softc** %5, align 8
  %9 = load %struct.glxsb_softc*, %struct.glxsb_softc** %5, align 8
  %10 = icmp eq %struct.glxsb_softc* %9, null
  br i1 %10, label %11, label %12

11:                                               ; preds = %2
  br label %17

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = call %struct.glxsb_session* @crypto_get_driver_session(i32 %13)
  store %struct.glxsb_session* %14, %struct.glxsb_session** %6, align 8
  %15 = load %struct.glxsb_session*, %struct.glxsb_session** %6, align 8
  %16 = call i32 @glxsb_hash_free(%struct.glxsb_session* %15)
  br label %17

17:                                               ; preds = %12, %11
  ret void
}

declare dso_local %struct.glxsb_softc* @device_get_softc(i32) #1

declare dso_local %struct.glxsb_session* @crypto_get_driver_session(i32) #1

declare dso_local i32 @glxsb_hash_free(%struct.glxsb_session*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
